[package]
name = "whatsapp-webhook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = "1.0.164"
serde_json = "1.0.96"

log = "0.4"
pretty_env_logger = "0.5"

rocket = { version = "0.5.0-rc.3", features = ["json"] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }

